--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "course-angular",
   "version": "0.0.0",
   "scripts": {
+    "db": "json-server --watch db.json --port 3001",
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
@@ -19,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
+    "json-server": "^0.17.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
