--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~13.3.0",
     "bootstrap": "^5.1.3",
     "json-server": "^0.17.0",
+    "ng-zorro-antd": "^13.2.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
